tests/baselines/reference/es6ClassTest9.errors.txt
==== tests/cases/compiler/es6ClassTest9.ts (3 errors) ====
    declare class foo();
                     ~
!!! es6ClassTest9.ts(1,18): error TS1005: '{' expected.
                      ~
!!! es6ClassTest9.ts(1,19): error TS1003: Identifier expected.
    function foo() {}
             ~~~
!!! es6ClassTest9.ts(2,10): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	es6ClassTest9.ts(1,1)
    